syntax = "proto3";

package talos;

option go_package = "./proto";

// The AdminService defines the Control Plane operations.
service AdminService {
  // UpdatePolicy handles Create/Update/Delete of policies.
  // Uses optimistic locking via versioning.
  rpc UpdatePolicy (UpdatePolicyRequest) returns (UpdatePolicyResponse);

  // WatchPolicies streams policy updates to connected agents.
  // Identity is strictly derived from the connection context (mTLS).
  rpc WatchPolicies (WatchRequest) returns (stream PolicyUpdate);

  // GetPolicy returns the active policies for the authenticated agent.
  rpc GetPolicy (GetPolicyRequest) returns (PolicyResponse);

  // ReportAudit allows agents to offload decision logs.
  rpc ReportAudit (AuditRequest) returns (AuditResponse);
}

// Data structures

message Policy {
  string id = 1;       // Unique UUID for the policy
  string subject = 2;  // e.g., "spiffe://domain/ns/default/sa/frontend"
  string resource = 3; // e.g., "/api/secrets"
  string action = 4;   // e.g., "read", "write"
  string effect = 5;   // "allow" or "deny"
  string version = 6;  // Opaque version string (ETag) for concurrency control
}

message UpdatePolicyRequest {
  Policy policy = 1;
  
  // If set, the update only succeeds if the current server version matches this.
  string expected_version = 2; 

  // If true, the policy identified by policy.id will be deleted.
  bool is_delete = 3;
}

message UpdatePolicyResponse {
  bool success = 1;
  string new_version = 2; // The new version hash after update
  string error_message = 3;
}

message WatchRequest {
  // Identity is extracted from mTLS/Auth context. 
  // No node_id here to prevent spoofing.
  string agent_version = 1; // Informational only
}

message PolicyUpdate {
  repeated Policy policies = 1;
  int64 generated_at = 2; // Server-side timestamp
}

message GetPolicyRequest {
  // Empty: Server determines the caller identity and filters policies accordingly.
}

message PolicyResponse {
  repeated Policy policies = 1;
}

message AuditRequest {
  // Client-reported timestamp (informational).
  // Server MUST use its own reception time for ordering.
  int64 client_timestamp = 1; 
  string resource = 2;
  string action = 3;
  string decision = 4; // "allow" or "deny"
  // Subject is omitted; server extracts it from context.
}

message AuditResponse {
  bool received = 1;
}
